editoast, front, core: remove gamma type
rename gamma to const_gamma to reflect its use: constant gamma braking
coefficient used when NOT circulating under ETCS/ERTMS signaling system in
m/s^2.
